[@mantine/core] Switch - Fix test visibility (#8370)
Closes #8370

As noted in https://github.com/orgs/mantinedev/discussions/8372 playwright is unable to interact with the switch because it interprets is as obscured / not visible in the viewport due to  its opacity, width and height.

This fix ensures the native checkbox is still visually hidden but now accessible to playwright and still to the DOM and a11y tree. See also: https://scottaohara.github.io/a11y_styled_form_controls/src/checkbox--switch/

Tested with latest version of Playwright 1.58.0.

--- a/packages/@mantine/core/src/components/Switch/Switch.module.css
+++ b/packages/@mantine/core/src/components/Switch/Switch.module.css
@@ -42,9 +42,11 @@
 }
 
 .input {
-  height: 0;
-  width: 0;
-  opacity: 0;
+  /* Hide the input visually without removing it from the accessibility tree or obscuring it in the DOM */
+  height: 100%;
+  width: 100%;
+  opacity: 0.0001;
+
   margin: 0;
   padding: 0;
   position: absolute;
